RESOLVED FIXED58284
REGRESSION(r81880): Paste menu is disabled for many edit fields (yahoo and google search, yahoo mail msg, forms, etc)
https://bugs.webkit.org/show_bug.cgi?id=58284
Summary REGRESSION(r81880): Paste menu is disabled for many edit fields (yahoo and go...
Jon Lee
Reported 2011-04-11 16:20:24 PDT
* SUMMARY Paste is disabled for many edit fields (yahoo and google search, yahoo mail msg, etc). Accelerator Ctrl-V will paster into same field from clipboard. Tested on W7. Not reproducible on SL. * STEPS TO REPRODUCE 1.copy some text for clipboard from third party (I used Character Map on windows) 2. Open yahoo.com or google.com 3. While cursor is in search field on the page, select Edit>Paste * RESULTS Paste option is disabled, but text can be pasted via Ctrl-V.
Attachments
Patch (2.13 KB, patch)
2011-04-11 16:22 PDT, Jon Lee
mjs: review+
Patch (4.92 KB, patch)
2011-04-13 12:02 PDT, Jon Lee
no flags
Jon Lee
Comment 1 2011-04-11 16:20:47 PDT
Jon Lee
Comment 2 2011-04-11 16:22:02 PDT
Maciej Stachowiak
Comment 3 2011-04-11 18:24:40 PDT
Comment on attachment 89117 [details] Patch Is it possible to create a regression test for this? If so, please add one, if not, r=me
Jon Lee
Comment 4 2011-04-12 10:17:52 PDT
I spoke with Enrica about this, and she told me that because the bug was in the menu and not keyboard shortcuts, that this is not something that can be tested via DumpRenderTree.
Jon Lee
Comment 5 2011-04-13 12:02:30 PDT
Created attachment 89425 [details] Patch New patch that avoids the #ifdef PLATFORM() call and moves it to a runtime check in EditingBehavior.h
Maciej Stachowiak
Comment 6 2011-04-13 14:22:00 PDT
Comment on attachment 89425 [details] Patch r=me
WebKit Commit Bot
Comment 7 2011-04-13 22:37:41 PDT
The commit-queue encountered the following flaky tests while processing attachment 89425 [details]: http/tests/misc/favicon-loads-with-icon-loading-override.html bug 58412 (author: alice.liu@apple.com) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 8 2011-04-13 22:40:27 PDT
Comment on attachment 89425 [details] Patch Clearing flags on attachment: 89425 Committed r83814: <http://trac.webkit.org/changeset/83814>
WebKit Commit Bot
Comment 9 2011-04-13 22:40:30 PDT
All reviewed patches have been landed. Closing bug.
Jessie Berlin
Comment 10 2011-04-14 09:26:33 PDT
*** Bug 58209 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.