2011-04-13  Jon Lee  <jonlee@apple.com>

Reviewed by Maciej Stachowiak.

        REGRESSION(r81880): Paste menu is disabled for many edit fields (yahoo and google search, yahoo mail msg, forms, etc)
        https://bugs.webkit.org/show_bug.cgi?id=58284
        <rdar://problem/9246149>

        * WebCore.exp.in: Exporting EditingBehavior.h for use in WebKit2
        * editing/EditingBehavior.h:
        (WebCore::EditingBehavior::shouldClearSelectionWhenLosingWebPageFocus): moving the platform-specific code out of an #ifdef and into this class for run-time instead of compile-time checking
2011-04-13  Jon Lee  <jonlee@apple.com>

        Reviewed by Maciej Stachowiak.

        REGRESSION(r81880): Paste menu is disabled for many edit fields (yahoo and google search, yahoo mail msg, forms, etc)
        https://bugs.webkit.org/show_bug.cgi?id=58284
        <rdar://problem/9246149>

        * WebProcess/WebPage/WebPage.cpp:
        (WebKit::WebPage::setFocused): Check for whether we are not supposed to be focused AND whether our platform behavior dictates to clear out the selection

Canonical link: https://commits.webkit.org/73571@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@83814 268f45cc-cd09-0410-ab3c-d52691b4dbfc