Source/WebCore/editing/EditingBehavior.h
@@ -59,6 +59,10 @@ public:
 
     // On Mac, when processing a contextual click, the object being clicked upon should be selected.
     bool shouldSelectOnContextualMenuClick() const { return m_type == EditingMacBehavior; }
+    
+    // On Mac, when the web view loses focus, any active selection clears. On Windows, the selection
+    // should remain highlighted, just in an inactive state.
+    bool shouldClearSelectionWhenLosingWebPageFocus() const { return m_type == EditingMacBehavior; }
 
 private:
     EditingBehaviorType m_type;
